<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_server_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/server_info" />
        <item
            android:id="@+id/nav_saved_projects"
            android:icon="@drawable/ic_insert_drive_file_black_24dp"
            android:title="@string/saved_projects" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_outline_black_24dp"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_credits"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/credits" />
    </group>

</menu>
